--- a/ompi/include/mpif-config.h.in
+++ b/ompi/include/mpif-config.h.in
@@ -38,7 +38,8 @@
 !
 !     Kind parameters
 !
-      integer MPI_OFFSET_KIND, MPI_ADDRESS_KIND, MPI_INTEGER_KIND, MPI_COUNT_KIND
+      integer MPI_OFFSET_KIND, MPI_ADDRESS_KIND, MPI_INTEGER_KIND
+      integer MPI_COUNT_KIND
       parameter (MPI_INTEGER_KIND=@OMPI_MPI_INTEGER_KIND@)
       parameter (MPI_ADDRESS_KIND=@OMPI_MPI_ADDRESS_KIND@)
       parameter (MPI_OFFSET_KIND=@OMPI_MPI_OFFSET_KIND@)
